--- a/mainui.css
+++ b/mainui.css
@@ -5,3 +5,10 @@
     text-align: center;
     padding: 10px;
 }
+
+button {
+    position: absolute;
+    left: 50%;
+    text-align: center;
+    padding: 10px;
+}
